--- a/app/templates/trials/trials.html
+++ b/app/templates/trials/trials.html
@@ -4,8 +4,33 @@
 
 {% block content %}
 <h2 class="text-primary">Trials List</h2>
-<div class="table-responsive">
-    {{ table|safe }}
-</div>
+<table id="data-table" class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Trial Name</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            <th>Status</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{ table|safe }}
+    </tbody>
+</table>
 <a href="{{ url_for('trials.add_trial') }}" class="btn btn-success mt-3">Add New Trial</a>
+{% endblock %}
+
+{% block scripts %}
+<script>
+    $(document).ready(function() {
+        $('#data-table').DataTable({
+            "paging": true,
+            "ordering": true,
+            "info": true,
+            "searching": true
+        });
+    });
+</script>
 {% endblock %}
